Prevented scroll behind open panel on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -73,6 +73,7 @@ button.dt-review {
 .filter-list {
   font-size: 12px;
   margin-bottom: 15px;
+  line-height: 1.5;
   .items {
     text-transform: capitalize;
     &:after {
@@ -105,7 +106,7 @@ input[type=checkbox]:focus, input[type=text]:focus, button:focus {
 }
 
 .selected-songs {
-  position: absolute;
+  position: fixed;
   z-index: 200;
   top: 0;
   right: 0;
@@ -251,7 +252,9 @@ input[type=checkbox] {
 
 .fixed {
   overflow: hidden;
-  /*padding-right: 15px;*/
+  @media screen and (max-width: 736px) {
+    position: fixed;
+  }
 }
 
 .bold {
